# lecture25

./: .gitignore  .gitmodules  README.md  events.json  lecture.cabal  lecture25.cabal  stack.yaml
src/: Bot.hs  BotUtil.hs  Event.hs  JSON.hs  Parser.hs  REPL.hs
