name:                lecture
version:             1.0.0.0
homepage:            https://github.com/fpclass/lecture25#readme
author:              Michael B. Gale
maintainer:          m.gale@warwick.ac.uk
copyright:           Copyright 2020 Michael B. Gale
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot, REPL
  build-depends:       base >= 4.7 && < 5, random, strict, text, slack-api
  default-language:    Haskell2010
  default-extensions:

source-repository head
  type:     git
  location: https://github.com/fpclass/lecture25
